--- a/src/globals.scss
+++ b/src/globals.scss
@@ -1,3 +1,5 @@
+@use "utils/variables" as var;
+
 *,
 *::before,
 *::after {
@@ -8,6 +10,7 @@
 }
 
 body {
+    font-family: var.$font;
     height: 100vh;
 }
 
@@ -22,4 +25,19 @@ button {
 
 a {
     text-decoration: none;
+}
+
+.bg_gradient {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 900px;
+    background-image: linear-gradient(to bottom right, var.$gradient1, var.$gradient2);
+    z-index: -1;
+}
+
+.wrapper_center {
+    display: flex;
+    justify-content: center;
 }
