--- a/src/globals.scss
+++ b/src/globals.scss
@@ -39,5 +39,6 @@ a {
 
 .wrapper_center {
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
