--- a/src/header.scss
+++ b/src/header.scss
@@ -12,6 +12,14 @@
     &__logo {
         width: 165px;
         height: 66px;
+        cursor: pointer;
+    }
+
+    &__menu_open_btn {
+        display: none;
+        width: 29px;
+        height: 33px;
+        cursor: pointer;
     }
 
     &__links {
@@ -22,6 +30,11 @@
             font-size: 0.875rem;
             font-weight: var.$regular;
             color: var.$white;
+
+            &:hover {
+                font-weight: var.$medium;
+                text-decoration: underline;
+            }
         }
     }
 }
@@ -29,11 +42,15 @@
 @include mix.breakpoint-mobile(medium) {
     .header {
         width: 100%;
+        height: 80px;
         padding: 0px 20px;
 
         &__logo {
-            width: 100px;
-            height: 44px;
+            width: 130px
+        }
+
+        &__menu_open_btn {
+            display: block;
         }
 
         &__links {
