--- a/src/about.scss
+++ b/src/about.scss
@@ -28,6 +28,7 @@
             font-size: 1rem;
             font-weight: var.$regular;
             color: var.$grey;
+            line-height: 175%;
         }
 
         .cta {
