--- a/src/header.scss
+++ b/src/header.scss
@@ -30,10 +30,10 @@
             font-size: 0.875rem;
             font-weight: var.$regular;
             color: var.$white;
+            transition: transform 200ms;
 
             &:hover {
-                font-weight: var.$medium;
-                text-decoration: underline;
+                transform: scale(1.1);
             }
         }
     }
