--- a/src/globals.scss
+++ b/src/globals.scss
@@ -11,7 +11,7 @@
 
 body {
     font-family: var.$font;
-    height: 100vh;
+    min-height: 100vh;
     overflow-x: hidden;
 }
 
@@ -51,4 +51,30 @@ textarea {
 
 .highlight {
     color: var.$lightBlue;
+}
+
+.scroll_btn {
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    border: none;
+    background-color: var.$blue;
+    opacity: 0.5;
+    transition: opacity 150ms, box-shadow 150ms;
+
+    &:hover {
+        opacity: 0.8;
+        box-shadow: 0px 0px 20px var.$blue;
+    }
+
+    img {
+        width: 25px;
+    }
+}
+
+.hidden {
+    display: none;
 }
