--- a/src/header.scss
+++ b/src/header.scss
@@ -37,6 +37,36 @@
             }
         }
     }
+
+    .menu {
+        display: none;
+        flex-direction: column;
+        padding: 20px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 320px;
+        height: 100%;
+        background-color: var.$white;
+        row-gap: 45px;
+
+        .close_menu_btn {
+            width: 30px;
+            height: 30px;
+            cursor: pointer;
+        }
+
+        .links {
+            display: flex;
+            flex-direction: column;
+            row-gap: 15px;
+
+            a {
+                color: var.$blue;
+                font-weight: var.$regular;
+            }
+        }
+    }
 }
 
 @include mix.breakpoint-mobile(medium) {
