--- a/src/footer.scss
+++ b/src/footer.scss
@@ -18,7 +18,7 @@
         left: 0;
         transform: translateY(-95px);
         position: absolute;
-        background-image: url('../../src/assets/images/Bg-Desktop.svg');
+        background-image: url('../../public/Bg-Desktop.svg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: left;
