--- a/src/footer.scss
+++ b/src/footer.scss
@@ -18,7 +18,7 @@
         left: 0;
         transform: translateY(-95px);
         position: absolute;
-        background: url('../../public/Bg.png');
+        background: url('/public/Bg.png');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: left;
